Fixed  issue of suggested list Make the li for suggested amounts alignment center Make pipe for suggested amounts list with currency with euro symbol

--- a/src/app/suggested-amount/suggested-amount.component.css
+++ b/src/app/suggested-amount/suggested-amount.component.css
@@ -8,6 +8,7 @@
     list-style-type: none;
     padding: 0;
     width: 15em;
+    text-align: center;
 }
 
 .amounts li {
